# coursework_1

./: .env  .env.exemple  .gitignore  README.md  path_to_file.py  pyproject.toml  search.json
data/: report_output.json
src/: main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
